# cluster-ops

./: .gitignore  CLAUDE.md  README.md  SPEC.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  ai_providers.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: ai_provider.rs  lib.rs
src-tauri/src/commands/: ai.rs  exec.rs  kubeconfig.rs  kubectl.rs  logs.rs  mod.rs  pods.rs  proxy.rs
src-tauri/src/models/: k8s.rs
src/components/ai/: AIInsight.tsx  AILoader.tsx  AIPanel.tsx  AskAIPanel.tsx
src/components/layout/: ClusterSelector.tsx  NamespaceBar.tsx  Sidebar.tsx  TitleBar.tsx  WindowControls.tsx
src/components/terminal/: CommandBar.tsx  ExecPanel.tsx  OutputPanel.tsx
src/components/workloads/: PodRow.tsx  PodTable.tsx  StatusBadge.tsx
src/hooks/: useAI.ts  useCluster.ts  useKubectl.ts  usePods.ts
src/lib/: queryClient.ts
src/store/: clusterStore.ts  namespaceStore.ts  uiStore.ts
src/styles/: globals.css
src/types/: ai.ts  kubernetes.ts
src/views/: ConfigMapsView.tsx  NetworkView.tsx  SecretsView.tsx  StorageView.tsx  WorkloadsView.tsx
