[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0" }
tauri-plugin-log = "2"
kube = { version = "0.97.0", default-features = false, features = ["config"] }
serde_yaml = "0.9.34"
tokio = { version = "1.49.0", features = ["full"] }
dirs = "6.0.0"
k8s-openapi = { version = "0.23.0", default-features = false, features = ["v1_30"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
